# segysak

./: .gitignore  .gitmodules  .mkdocsignore  .readthedocs.yml  MANIFEST.in  README.md  README.rst  ar.setup.py  badge-mkdocs.json  code_of_conduct.md  contributing.rst  dev  environment-rtd.yml  environment.yml  index.html  latest  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  versions.json
.github/: CODEOWNERS
0.5/: 404.html  code_of_conduct.html  examples_about.html  tutorial.html  why-segysak.html
0.5.0rc1/: history.html  index.html  objects.inv  seisnc.html  why-segysak.html
0.5.0rc2.dev2/: examples_about.html  examples_about.md
0.5.0rc2.dev3/: LICENSE.html  api.html  installation.html  quickstart.html
0.5.0rc2.dev7/: history.html  objects.inv  seisnc.html  sitemap.xml
0.5.2.dev/: 404.html  LICENSE.html  api.html  code_of_conduct.html  contributing.html  examples_about.html  history.html  index.html  installation.html  objects.inv  quickstart.html  seisnc-standard.html  seisnc.html  seisnc.md  sitemap.xml  tutorial.html  upgrading.html  why-segysak.html  why-segysak.md
0.5.3.dev/: 404.html  LICENSE.html  api.html  code_of_conduct.html  contributing.html  examples_about.html  history.html  index.html  installation.html  quickstart.html  seisnc-standard.html  seisnc.html  sitemap.xml  tutorial.html  upgrading.html  why-segysak.html
0.5.4.dev/: 404.html  LICENSE.html  api.html  code_of_conduct.html  contributing.html  examples_about.html  history.html  index.html  installation.html  quickstart.html  quickstart.md  seisnc-standard.html  seisnc.html  sitemap.xml  tutorial.html  upgrading.html  why-segysak.html
0.5.5.dev/: 404.html  LICENSE.html  api.html  code_of_conduct.html  contributing.html  examples_about.html  history.html  index.html  installation.html  quickstart.html  seisnc-standard.html  seisnc.html  sitemap.xml  tutorial.html  upgrading.html  why-segysak.html
0.5.dev38+unknown/: 404.html  api.md
0.5.dev39+unknown/: history.html  index.html  seisnc-standard.md
0.5.dev40/: 404.html  LICENSE.html  api.html  code_of_conduct.html  examples_about.html  history.html  history.md  index.html  installation.html  objects.inv  quickstart.html  seisnc-standard.html  seisnc.html  sitemap.xml  tutorial.html  why-segysak.html
0.5.dev40+unknown/: badge-mkdocs.json  installation.md
0.5.dev41+unknown/: api.html  code_of_conduct.html  examples_about.html  seisnc.html  sitemap.xml
0.5.dev42+unknown/: LICENSE.html  installation.html  quickstart.html  seisnc-standard.html  tutorial.html  tutorial.md  why-segysak.html
0.5.dev45+unknown/: 404.html  code_of_conduct.html  examples_about.html  history.html  installation.html  sitemap.xml  tutorial.html
0.5.dev46+unknown/: LICENSE.html  api.html  index.md  seisnc-standard.html  why-segysak.html
0.5.dev52+unknown/: index.html  quickstart.html  seisnc.html  sitemap.xml
0.5.dev60/: sitemap.xml
0.5.dev61/: badge-mkdocs.json
0.5.dev80/: 404.html  LICENSE.html  api.html  code_of_conduct.html  examples_about.html  history.html  index.html  installation.html  quickstart.html  seisnc-standard.html  seisnc.html  sitemap.xml  tutorial.html  why-segysak.html
0.5.dev82/: 404.html  code_of_conduct.html  examples_about.html  history.html  index.html  quickstart.html  seisnc-standard.html  seisnc.html  tutorial.html
0.5.dev85/: 404.html  LICENSE.html  api.html  code_of_conduct.html  examples_about.html  index.md  installation.html  quickstart.html  seisnc-standard.html  sitemap.xml  tutorial.html  why-segysak.html
0.5.dev89/: contributing.html  examples_about.html  index.html  seisnc-standard.html  upgrading.html
0.6.dev/: 404.html  LICENSE.html  api.html  code_of_conduct.html  contributing.html  examples_about.html  history.html  index.html  index.md  installation.html  quickstart.html  seisnc-standard.html  seisnc.html  sitemap.xml  tutorial.html  upgrading.html  why-segysak.html
0.6.dev1/: 404.html  api.html  code_of_conduct.html  history.html
0.6.dev2/: conf.py  contributing.html  examples_about.html  index.html  installation.html  quickstart.html  seisnc-standard.md  seisnc.html  why-segysak.html
dev/: 404.html  CITATION.cff  LICENSE.html  api.html  code_of_conduct.html  examples_about.html  history.html  index.html  installation.html  quickstart.html  seisnc-standard.html  seisnc.html  sitemap.xml  tutorial.html  upgrading.md  why-segysak.html
docs/: api.md  api.rst  command-line-tool.rst  conf.py  contributing.md  examples.rst  examples_about.md  faq.rst  index.md  index.rst  installation.md  installation.rst  quick-overview.rst  requirements.txt  seisnc-standard.md  seisnc-standard.rst  tutorial.md  tutorial.rst  upgrading.md  why-segysak.rst
examples/: QuickOverview.py  example_amplitude_extraction_displays.py  example_depth_conversion.py  example_extract_arbitrary_line.py  example_extract_data_on_a_horizon.py  example_merge_surveys.py  example_reading_and_writing_zgy.py  example_segy_headers.py  example_segysak_basics.py  example_segysak_dask.py  example_segysak_segy_vectorisation.py  example_subsurface.py  example_working_with_3d_gathers.py
segysak/: __init__.py  _accessor.py  _cli.py  _core.py  _keyfield.py  _richstr.py  _segy.py  _seismic_dataset.py  command_line.py  geometry.py  progress.py  segy.py  seisnc.py  tools.py  version.py
tests/: conftest.py  fixtures_data.py  fixtures_segy.py  fixtures_seisnc.py  fixtures_zgy.py  test_accessor.py  test_cli.py  test_core.py  test_fixtures.py  test_geometry.py  test_openzgy_xarray.py  test_richstr.py  test_richstring.py  test_segy_segy_core.py  test_segy_segy_freewriter.py  test_segy_xarray.py  test_segy_xarray_writer.py  test_seismic_dataset.py  test_seismic_segy.py  test_seismic_segy_text.py  test_seismic_seisnc.py  test_seismic_zgy.py  test_tools.py
v0.5.1/: LICENSE.html  code_of_conduct.html  examples_about.html  index.html  installation.html  seisnc-standard.html  sitemap.xml  upgrading.html
v0.5.3/: 404.html  LICENSE.html  api.html  code_of_conduct.html  contributing.html  examples_about.html  history.html  index.html  (+9 more)
(+988 files in other folders)
