[project]
name = "segysak"
dynamic = ["version"]
authors = [
    {name= "SEGY-SAK Developers", email= "segysak@gamil.com"}
]
description = "SEG-Y Seismic Data Inspection and Manipulation Tools using Xarray"
readme = {file = "README.rst", content-type = "text/x-rst"}
dependencies = [
    "numpy>=1.20",
    "pandas",
    "matplotlib",
    "segyio",
    "xarray",
    "dask",
    "distributed",
    "tqdm",
    "scipy!=1.10.0",  # version introduced bug with interp
    "click",
    "pyzgy",
    "h5netcdf",
    "addict",
    "more-itertools>=8.0",
]
requires-python = ">=3.9"
license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Repository = "https://github.com/trhallam/segysak"

[project.optional-dependencies]
test = [
    "pytest",
    "pylint",
    "hypothesis",
    "affine",
]
docs = [
    "jupytext",
    "pyvista",
    "jupyterlab",
    "wellpathpy",
    "pyshp",
    "mkdocs",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-material",
    "mkdocs-material",
    "mkdocs-simple-plugin",
    "mkdocs-jupyter",
    "mkdocs-include-markdown-plugin",
    "mkautodoc",
    "mike",
]

# testing config

[tool.hatch.envs.hatch-test]
features = [
    "test"
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12", "3.11", "3.10", "3.9"]

# docs config

[tool.hatch.envs.docs]
features = [
    "docs"
]

[tool.hatch.envs.docs.scripts]
build-examples = [
    "jupytext --to ipynb --execute examples/*.py",
    "mkdir -p examples/notebooks",
    "mv examples/*.ipynb examples/notebooks/.",
]
cli-snippets = [
    "mkdir -p docs/.snippets/cli",
    "segysak > docs/.snippets/cli/segysak.txt",
    "segysak ebcidc --help > docs/.snippets/cli/ebcidc.txt",
    "segysak scan --help > docs/.snippets/cli/scan.txt",
    "segysak scrape --help > docs/.snippets/cli/scrape.txt",
    "segysak convert --help > docs/.snippets/cli/convert.txt",
]
serve = [
    "if [ -f \"docs/examples\" ]; then rm -rf docs/examples/*.ipynb; fi",
    "mkdir -p docs/examples",
    """if [ ! -f \"examples/notebooks/QuickOverview.ipynb\" ]; then
        jupytext --to ipynb examples/*.py;
        mv examples/*.ipynb examples/notebooks/.;
    fi""",
    "cp examples/notebooks/*.ipynb docs/examples/.",
    "mkdocs serve",
]
build = "mkdocs build"


# extras

[project.scripts]
segysak = "segysak._cli:cli"

[project.entry-points."xarray.backends"]
sgy_engine = "segysak.segy._xarray:SgyBackendEntrypoint"

# build config

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "segysak/_version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-verison"

[tool.hatch.build.targets.sdist]
only-include = ["segysak", "tests"]

[tool.hatch.build.target.wheel]
packages = ["segysak"]

[tool.hatch.build.targets.wheel]
only-packages = true

