
[metadata]
name = segysak
description = SEG-Y Seismic Data Inspection and Manipulation Tools using Xarray
long_description = file:README.rst
long_description_content_type = text/x-rst
authors = SEGY-SAK Developers
author_email = segysak@gamil.com
url = https://github.com/trhallam/segysak

license = GPL3
licence_files = LICENSE

readme = README.rst

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires = 
    numpy
    pandas
    matplotlib
    segyio
    xarray
    dask
    distributed
    tqdm
    scipy
    click
    h5netcdf
    addict
    more-itertools>=8.0
    setuptools_scm

[options.extras_require]
test = 
    pytest
    flake8
    hypothesis
    affine
    pytest_cases
docs = 
    sphinx
    sphinx_rtd_theme
    sphinxcontrib-programoutput
    nbsphinx>=0.7
    pandoc
    nbconvert!=5.4
    nbformat
    sphinx-copybutton
    rtds-action
    jupytext
    pyvista
    jupyterlab
    wellpathpy
    pyshp

[options.entry_points]
console_scripts =
    segysak = segysak._cli:cli


[aliases]
test=pytest

[flake8]
max-line-length=120
exclude = .git,__pycache__,docs/source/conf.py,build,dist,segysak/openzgy/open-zgy,examples,tests

[tool:pytest]
testpaths = tests
